--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <svg></svg>
   </body>
   <script type="text/javascript" src="/bundle.js"></script>
 </html>
